--- a/packages/rollup/test/specimens/common-splitting/c.css
+++ b/packages/rollup/test/specimens/common-splitting/c.css
@@ -1,3 +1,9 @@
 .c {
     color: cyan;
 }
+
+.c2 {
+    composes: shared2 from "./shared2.css";
+
+    color: crimson;
+}
